maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:55: error: ')' expected but 'else' found.
    else if (y!=getMondeLargeur-1){
    ^